[package]
name = "phonebridge"
version = "0.1.0"
authors = ["Wesley Aptekar-Cassels <me@wesleyac.com>"]
edition = "2018"

[dependencies]
tokio = { version = "0.2", features = ["full"] }
warp = "0.2"
lettre = "0.10.0-alpha.4"
sha-1 = "0.9.2"
hmac = "0.10.1"
itertools = "0.9"
base64 = "0.13.0"
lazy_static = "1.4.0"
toml = "0.4.2"
